change ArrayList to LinkedList, so i can reduce the move time change snake body type from Point2D to GameObject for further purpose